# chatterbox-colab

./: README.md  pyproject.toml
src/chatterbox/: mtl_tts.py  tts.py  vc.py
src/chatterbox/models/t3/: t3.py
